--- a/exerccicioA.html
+++ b/exerccicioA.html
@@ -12,6 +12,10 @@
             font-size: x-large;
             text-align: center;
         }
+        .enfatizar{
+          color: blue;
+          font-style: italic;
+        }
     </style>
 
 </head>
