--- a/de100ate1.html
+++ b/de100ate1.html
@@ -7,13 +7,12 @@
 </head>
 <body>
     <script>
-        let somaTotal = 0
+        let contagemRegressiva = 0
 
-        for (let i = 1; i <= 100; i++){
-            somaTotal += i;
-            console.log(somaTotal)
+        for( let i = 100; i >= 1; i--){
+            contagemRegressiva = i;
+            console.log(contagemRegressiva);
         }
-
     </script>
 </body>
 </html>
