--- a/listajs.html
+++ b/listajs.html
@@ -7,13 +7,11 @@
 </head>
 <body>
     <script>
-        let somaTotal = 0
 
-        for (let i = 1; i <= 100; i++){
-            somaTotal += i;
-            console.log(somaTotal)
-        }
-
+        let frutas = ["maçã","banana","uva","tomate"];
+            for(i = 0; i < frutas.length; i++){
+                console.log(frutas[i])
+            }
     </script>
 </body>
 </html>
