--- a/tabuada.html
+++ b/tabuada.html
@@ -7,13 +7,10 @@
 </head>
 <body>
     <script>
-        let somaTotal = 0
-
-        for (let i = 1; i <= 100; i++){
-            somaTotal += i;
-            console.log(somaTotal)
+        let numero = prompt("Digite seu número")
+        for(let i = 1; i <= 10; i++){
+            console.log(`${numero} x ${i} = ${numero * i}`)
         }
-
     </script>
 </body>
 </html>
