--- a/quadrado,js.html
+++ b/quadrado,js.html
@@ -16,5 +16,16 @@
 </head>
 <body>
     <div id="caixa"></div>
+    <script>
+        let caixa = document.getElementById('caixa')
+
+        caixa.addEventListener('mouseover', function(){
+            caixa.style.backgroundColor = 'pink'
+            })
+
+        caixa.addEventListener('mouseout', function(){
+            caixa.style.backgroundColor = 'red'
+            })
+    </script>
 </body>
 </html>
