--- a/carregamento.html
+++ b/carregamento.html
@@ -6,13 +6,16 @@
     <title>Document</title>
     <style>
 
-        #caixa{
-            width: 450px;
+        #container{
+            width: 100%;
+            background-color: brown;
             height: 30px;
-            border: 2px solid rgb(221, 153, 164);
-            margin: 0 auto;
+        }
+
+        #caixa{
+            height: 30px;
             background-color: rgb(211, 165, 180);
-            position: absolute;
+            
         }
 
     </style>
@@ -20,8 +23,10 @@
 </head>
 <body>
     <h1>Carregando...</h1>
+    <div id="container">
     <div id="caixa"></div>
-
+        </div>
+        
     <script>
 
     let posicao = 0
@@ -31,7 +36,7 @@
             posicao += 1
             caixa.style.width = posicao + '%'
 
-            if(posicao >= 35){
+            if(posicao >= 100){
                 clearInterval(intervalo)
                 alert("Carregamento completo!!")
             }
